--- a/client/src/components/pages/HomePage/Client/Client.scss
+++ b/client/src/components/pages/HomePage/Client/Client.scss
@@ -12,15 +12,38 @@
     text-align: center;
   }
 
+  &__imgContainer {
+    display: flex;
+    justify-content: space-around;
+    padding: 50px 0;
+  }
+
   &__img {
     height: 170px;
     object-fit: cover;
     width: 170px;
+    margin: 30px;
     border-radius: 27px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     filter: grayscale(1);
     &:hover {
       filter: grayscale(0);
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  .client {
+    &__imgContainer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 50px 0;
+    }
+
+    &__img {
+      height: 140px;
+      width: 140px;
     }
   }
 }
