--- a/client/src/components/elements/NavigationAdmin/NavigationAdmin.scss
+++ b/client/src/components/elements/NavigationAdmin/NavigationAdmin.scss
@@ -42,6 +42,26 @@
     }
   }
 
+  &__itemNavDeco {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 20px;
+    min-width: 250px;
+    background-color: #c22c02;
+    color: rgb(255, 255, 255);
+    height: 10px;
+    padding: 30px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    -webkit-box-shadow: 0px 0px 59px -30px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 59px -30px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 59px -30px rgba(0, 0, 0, 0.75);
+    transition: all 0.2s linear;
+  }
+
   &__textNav {
     padding-left: 30px;
     color: rgb(255, 255, 255);
